modules/015-admission-policy-engine/charts/constraint-templates/tests/disallowed-tolerations/allowed_no_tolerations.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed
  namespace: default
spec:
  containers:
  - name: c
    image: nginx
