modules/015-admission-policy-engine/charts/constraint-templates/tests/disallowed-tolerations/disallowed_toleration_equal.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-equal
  namespace: default
spec:
  tolerations:
  - key: "dedicated"
    operator: Equal
    value: "gpu"
  containers:
  - name: c
    image: nginx
