modules/015-admission-policy-engine/charts/constraint-templates/tests/disallowed-tolerations/disallowed_toleration_noexecute_exists.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-noexecute-exists
  namespace: default
spec:
  tolerations:
  - operator: Exists
    effect: NoExecute
  containers:
  - name: c
    image: nginx
